# idle-ffmpeg-runner

./: Cargo.toml
.github/workflows/: release.yml
src/: activity.rs  main.rs  pausable_process.rs  settings.rs
