[package]
name = "idle-ffmpeg-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["rt", "macros", "rt-multi-thread", "process", "fs", "time"] }
tokio-stream = { version = "0.1.12", features = ["fs"] }
winapi = { version = "0.3.9", features = ["debugapi"] }
