[package]
name = "ffmpeg-idle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
directories = "4.0.1"
fs4 = { version = "0.6.3", features = ["tokio-async"] }
mime = "0.3.16"
mime_guess = "2.0.4"
serde = { version = "1.0.152", features = ["derive"] }
shell-words = "1.1.0"
tokio = { version = "1.25.0", features = ["rt", "macros", "process", "fs", "time"] }
tokio-stream = { version = "0.1.12", features = ["fs"] }
winapi = { version = "0.3.9", features = ["debugapi", "winuser"] }
